table margin issues resolved

--- a/content/portfolio/branch-and-bound-algorithm/main.mdx
+++ b/content/portfolio/branch-and-bound-algorithm/main.mdx
@@ -2,7 +2,7 @@
 title: Branch-and-Bound Algorithm
 type: 'blog'
 date: 2022-02-10
-published: true
+published: false
 description: 'Another efficient algorithm for job scheduling'
 tags: ['Golang', 'Scheduling']
 ---
