--- a/content/portfolio/moore-hodgson-algorithm/main.mdx
+++ b/content/portfolio/moore-hodgson-algorithm/main.mdx
@@ -73,33 +73,33 @@ tasks that require less processing time. Thus, we can maximize the number of job
 
 Solving the probem above with **Moore-Hodgson**, we then have the following table.
 
-|                       | $j_1$ | $j_2$ | $j_3$ | $j_4$ | $j_5$ |       -       |
+|                       | $j_1$ | $j_2$ | $j_3$ | $j_4$ | $j_5$ |               |
 | :-------------------: | :---: | :---: | :---: | :---: | :---: | :-----------: |
-|    Due Date $d_j$     |   6   |   7   |   8   |   9   |  11   |       -       |
+|    Due Date $d_j$     |   6   |   7   |   8   |   9   |  11   |               |
 | Processing Time $p_j$ |   4   |   3   |   2   |   5   |   6   | Rejected Jobs |
 | Completion Time $C_j$ |   4   |   -   |   -   |   -   |   -   |       -       |
 |                       |   4   |   7   |   -   |   -   |   -   |       -       |
 |                       |   4   |   7   |   9   |   -   |   -   |       -       |
-|                       |   4   |   7   |  \*   |   -   |   -   |     $j_3$     |
-|                       |   4   |   7   |  \*   |  12   |   -   |     $j_3$     |
-|                       |   4   |   7   |  \*   |  \*   |   -   | $j_3$ & $j_4$ |
-|                       |   4   |   7   |  \*   |  \*   |  13   | $j_3$ & $j_4$ |
-|                       |   4   |   7   |  \*   |  \*   |  \*   | $j_3$ & $j_4$ |
+|                       |   4   |   7   |  \*   |   -   |   -   | Job 3         |
+|                       |   4   |   7   |  \*   |  12   |   -   | Job 3         |
+|                       |   4   |   7   |  \*   |  \*   |   -   | Job 3, 4, & 5 |
+|                       |   4   |   7   |  \*   |  \*   |  13   | Job 3, 4, & 5 |
+|                       |   4   |   7   |  \*   |  \*   |  \*   | Job 3, 4, & 5 |
 
 Let's try another example with more jobs.
 
 ## Problem 2
 
 |                 | $j_1$ | $j_2$ | $j_3$ | $j_4$ | $j_5$ | $j_6$ | $j_7$ | $j_8$ |
-| :-------------: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
-|    Due Date     |   6   |   8   |   9   |  11   |  20   |  25   |  28   |  35   |
+| :-------------- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
+| Due Date        |   6   |   8   |   9   |  11   |  20   |  25   |  28   |  35   |
 | Processing Time |   4   |   1   |   6   |   3   |   6   |   8   |   7   |  10   |
 
 Adding the completion time, we have the following output.
 
 |                 | $j_1$ | $j_2$ | $j_3$ | $j_4$ | $j_5$ | $j_6$ | $j_7$ | $j_8$ |
-| :-------------: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
-|    Due Date     |   6   |   8   |   9   |  11   |  20   |  25   |  28   |  35   |
+| :-------------- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
+| Due Date        |   6   |   8   |   9   |  11   |  20   |  25   |  28   |  35   |
 | Processing Time |   4   |   1   |   6   |   3   |   6   |   8   |   7   |  10   |
 | Completion Time |   4   |   5   |  11   |  14   |  20   |  28   |  35   |  45   |
 
@@ -110,21 +110,21 @@ Imagine telling your boss that kind of news.
 Let's see how many jobs we can optimize the numbers of jobs that we can deliver on time.
 Solving the probem above with **Moore-Hodgson**, we then have the following table.
 
-|                       | $j_1$ | $j_2$ | $j_3$ | $j_4$ | $j_5$ | $j_6$ | $j_7$ | $j_8$ | -             |
-| :-------------------: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | ------------- |
-|    Due Date $d_j$     |   6   |   8   |   9   |  11   |  20   |  25   |  28   |  35   | -             |
+|                       | $j_1$ | $j_2$ | $j_3$ | $j_4$ | $j_5$ | $j_6$ | $j_7$ | $j_8$ |               |
+| :-------------------- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :-----------: |
+| Due Date $d_j$        |   6   |   8   |   9   |  11   |  20   |  25   |  28   |  35   |               |
 | Processing Time $p_j$ |   4   |   1   |   6   |   3   |   6   |   8   |   7   |  10   | Rejected Jobs |
 | Completion Time $C_j$ |   4   |   -   |   -   |   -   |   -   |   -   |   -   |   -   | -             |
 |                       |   4   |   5   |   -   |   -   |   -   |   -   |   -   |   -   | -             |
 |                       |   4   |   5   |  11   |   -   |   -   |   -   |   -   |   -   | -             |
-|                       |   4   |   5   |  \*   |   -   |   -   |   -   |   -   |   -   | $j_3$         |
-|                       |   4   |   5   |  \*   |   8   |   -   |   -   |   -   |   -   | $j_3$         |
-|                       |   4   |   5   |  \*   |   8   |   -   |   -   |   -   |   -   | $j_3$         |
-|                       |   4   |   5   |  \*   |   8   |  14   |   -   |   -   |   -   | $j_3$         |
-|                       |   4   |   5   |  \*   |   8   |  14   |  22   |   -   |   -   | $j_3$         |
-|                       |   4   |   5   |  \*   |   8   |  14   |  22   |  29   |   -   | $j_3$         |
-|                       |   4   |   5   |  \*   |   8   |  14   |  \*   |  29   |   -   | $j_3$ & $j_6$ |
-|                       |   4   |   5   |  \*   |   8   |  14   |  \*   |  29   |  31   | $j_3$ & $j_6$ |
+|                       |   4   |   5   |  \*   |   -   |   -   |   -   |   -   |   -   | Job 3         |
+|                       |   4   |   5   |  \*   |   8   |   -   |   -   |   -   |   -   | Job 3         |
+|                       |   4   |   5   |  \*   |   8   |   -   |   -   |   -   |   -   | Job 3         |
+|                       |   4   |   5   |  \*   |   8   |  14   |   -   |   -   |   -   | Job 3         |
+|                       |   4   |   5   |  \*   |   8   |  14   |  22   |   -   |   -   | Job 3         |
+|                       |   4   |   5   |  \*   |   8   |  14   |  22   |  29   |   -   | Job 3         |
+|                       |   4   |   5   |  \*   |   8   |  14   |  \*   |  29   |   -   | Job 3 & Job 6 |
+|                       |   4   |   5   |  \*   |   8   |  14   |  \*   |  29   |  31   | Job 3 & Job 6 |
 
 Hence with the help of the algorithm, we can have 6 jobs delivered on time and 2 jobs late.
 It doesn't sound bad at all.
