table margin issues resolved

--- a/content/portfolio/moore-hodgson-algorithm/main.mdx
+++ b/content/portfolio/moore-hodgson-algorithm/main.mdx
@@ -82,8 +82,8 @@ Solving the probem above with **Moore-Hodgson**, we then have the following tabl
 |                       |   4   |   7   |   9   |   -   |   -   |       -       |
 |                       |   4   |   7   |  \*   |   -   |   -   | Job 3         |
 |                       |   4   |   7   |  \*   |  12   |   -   | Job 3         |
-|                       |   4   |   7   |  \*   |  \*   |   -   | Job 3, 4, & 5 |
-|                       |   4   |   7   |  \*   |  \*   |  13   | Job 3, 4, & 5 |
+|                       |   4   |   7   |  \*   |  \*   |   -   | Job 3 & 4     |
+|                       |   4   |   7   |  \*   |  \*   |  13   | Job 3 & 4     |
 |                       |   4   |   7   |  \*   |  \*   |  \*   | Job 3, 4, & 5 |
 
 Let's try another example with more jobs.
