--- a/content/portfolio/moore-hodgson-algorithm/main.mdx
+++ b/content/portfolio/moore-hodgson-algorithm/main.mdx
@@ -91,14 +91,14 @@ Let's try another example with more jobs.
 
 ## Problem 2
 
-|                       | $j_1$ | $j_2$ | $j_3$ | $j_4$ | $j_5$ | $j_6$ | $j_7$ | $j_8$ | 
+| Job                   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   |
 | :-------------------- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
 | Due Date $d_j$        |   6   |   8   |   9   |  11   |  20   |  25   |  28   |  35   |
 | Processing Time $p_j$ |   4   |   1   |   6   |   3   |   6   |   8   |   7   |  10   |
 
 Adding the completion time, we have the following output.
 
-|                       | $j_1$ | $j_2$ | $j_3$ | $j_4$ | $j_5$ | $j_6$ | $j_7$ | $j_8$ | 
+| Job                   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   |
 | :-------------------- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
 | Due Date $d_j$        |   6   |   8   |   9   |  11   |  20   |  25   |  28   |  35   |
 | Processing Time $p_j$ |   4   |   1   |   6   |   3   |   6   |   8   |   7   |  10   |
@@ -111,7 +111,7 @@ Imagine telling your boss that kind of news.
 Let's see how many jobs we can optimize the numbers of jobs that we can deliver on time.
 Solving the probem above with **Moore-Hodgson**, we then have the following table.
 
-|                       | $j_1$ | $j_2$ | $j_3$ | $j_4$ | $j_5$ | $j_6$ | $j_7$ | $j_8$ |               |
+| Job                   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   |               |
 | :-------------------- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :-----------: |
 | Due Date $d_j$        |   6   |   8   |   9   |  11   |  20   |  25   |  28   |  35   |               |
 | Processing Time $p_j$ |   4   |   1   |   6   |   3   |   6   |   8   |   7   |  10   | Rejected Jobs |
