moore-hodgeson finished

--- a/content/portfolio/moore-hodgson-algorithm/main.mdx
+++ b/content/portfolio/moore-hodgson-algorithm/main.mdx
@@ -230,4 +230,4 @@ After assigning the jobs, we will have a list of scheduled jobs and rejected job
 Before we append the rejected jobs to the scheduled jobs, we have to sort them in 
 order to make sure that the jobs are in the correct order shown in line 18 in the main function.
 
-For more details of the code, [click here](https://github.com/nathansetyawan96/scheduling-algorithms) to this project repository on Github.
+For more details of the code, [click here](https://github.com/nathansetyawan96/scheduling-algorithms) to see this project repository on Github.
