moore-hodgeson finished

--- a/content/portfolio/moore-hodgson-algorithm/main.mdx
+++ b/content/portfolio/moore-hodgson-algorithm/main.mdx
@@ -87,7 +87,11 @@ Solving the probem above with **Moore-Hodgson**, we then have the following tabl
 |                       |   4   |   7   |  \*   |  \*   |  13   | Job 3 & 4     |
 |                       |   4   |   7   |  \*   |  \*   |  \*   | Job 3, 4, & 5 |
 
-Let's try another example with more jobs.
+Note that - is used to represent a job is not yet added, 
+and * is used to represent a job that is rejected.
+
+Since the result is pretty much the same as we initially assummed, 
+let's try another example with more jobs.
 
 ## Problem 2
 
