moore-hodgeson finished

--- a/content/portfolio/moore-hodgson-algorithm/main.mdx
+++ b/content/portfolio/moore-hodgson-algorithm/main.mdx
@@ -131,6 +131,9 @@ Solving the probem above with **Moore-Hodgson**, we then have the following tabl
 |                       |   4   |   5   |  \*   |   8   |  14   |  \*   |  29   |   -   | Job 3 & Job 6 |
 |                       |   4   |   5   |  \*   |   8   |  14   |  \*   |  29   |  31   | Job 3 & Job 6 |
 
+Note that - is used to represent a job is not yet added, 
+and * is used to represent a job that is rejected.
+
 Hence with the help of the algorithm, we can have 6 jobs delivered on time and 2 jobs late.
 It doesn't sound bad at all.
 
